--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://elinca.net">
 
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement({ pageLanguage: 'es', includedLanguages: 'en,es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE }, 'google_translate_element');
+      }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    
+
   </head>
   <body>
     <div id="root"></div>
