--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/elinca-c86fe.appspot.com/o/figura.png?alt=media&token=a5277c42-eff6-41aa-98ec-f52922b57423">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="https://firebasestorage.googleapis.com/v0/b/elinca-c86fe.appspot.com/o/figura.png?alt=media&token=a5277c42-eff6-41aa-98ec-f52922b57423" />
+    <link rel="icon" type="image/svg+xml" href="elincaes_icon.png" />
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://elinca.net">
